--- a/style.css
+++ b/style.css
@@ -7,24 +7,42 @@
 
 h2{
   font-family: 'Josefin Sans', sans-serif;
-  font-weight: 400;
-  margin-bottom: 20px;
-  line-height: 30px;
+  font-weight: 500;
+  margin-bottom: 24px;
+  line-height: 32px;
+  color: #3c4043;
 }
 
 p{
   text-align: justify;
-  line-height: 28px;
+  line-height: 24px;
+  font-size: 14px;
 }
 
-ul{
+header{
+  width: 100%;
+  color:#5f6368;
+  font-family: 'Josefin Sans', sans-serif;
+  padding: 24px 24px 0px;
+  border-bottom: 1px solid rgba(151,151,151,0.5);
+}
+
+.header-bottom li{
+  display: inline-table;
+  font-size: 15px;
+  font-weight: 400;
+  margin-right: 42px;
+  margin-bottom: 10px;
+}
+
+.container ul{
   list-style: none;
   width: 990px;
   margin: auto;
 }
 
-li{
-  margin: 80px 0;
+.container li{
+  margin: 64px 0;
 }
 
 
